# nsGBE

./: README.md  build  build-clang.sh  build-gcc.sh  configure-gtkplus  configure-js  configure-linux  configure-sdl2  configure-wasm
app/: window.c
app/gtkplus/: CMakeLists.txt  main.c  window.c
app/linux/: CMakeLists.txt  main.c  window.c
app/sdl2/: CMakeLists.txt  main.c  window.c
app/web/: main.c  nsgbe.html  window.c
app/web/js/: CMakeLists.txt
app/web/wasm/: CMakeLists.txt
docs/: CNAME  index.html
docs/js/: index.html  nsgbe.js.mem
docs/wasm/: nsgbe.js  nsgbe.wasm
emu/: clock.c  cpu.c  display.c  env.h  ext_chip.c  io.c  main.c  memory.c  nsgbe.c  nsgbe.h
emu/ext_chip/: mbc1.c  mbc3.c  mbc5.c
res/: cpu_instrs.png.license
